--- a/client/package.json
+++ b/client/package.json
@@ -3,31 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.3.4",
-    "axios": "^0.18.0",
-    "babel-loader": "^8.0.5",
+    "@babel/core": "^7.12.10",
+    "axios": "^0.21.1",
+    "babel-loader": "^8.2.2",
     "date-fns": "^1.30.1",
     "faker": "^4.1.0",
-    "lodash": "^4.17.11",
-    "moment": "^2.24.0",
-    "react": "^16.8.3",
-    "react-calendar": "^2.18.1",
-    "react-dates": "^20.1.0",
-    "react-dom": "^16.8.3",
+    "lodash": "^4.17.20",
+    "moment": "^2.29.1",
+    "react": "^16.14.0",
+    "react-calendar": "^2.19.2",
+    "react-dates": "^20.3.0",
+    "react-dom": "^16.14.0",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.8",
+    "react-scripts": "3.0.1",
     "react-slick": "^0.23.2",
     "react-stripe-elements": "^2.0.3",
-    "react-testing-library": "^6.0.0",
+    "react-testing-library": "^6.1.2",
     "react-throttle": "^0.3.0",
-    "react-with-direction": "^1.3.0",
-    "redux": "^4.0.1",
+    "react-with-direction": "^1.3.1",
+    "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.85.0",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.4.1"
   },
   "scripts": {
     "build-semantic": "cd src/semantic && gulp build",
@@ -49,8 +49,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.10.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "gulp": "^3.9.1",
     "semantic-ui": "^2.4.2"
   },
