--- a/client/package.json
+++ b/client/package.json
@@ -32,7 +32,7 @@
     "build-semantic": "cd src/semantic && gulp build",
     "watch-semantic": "cd src/semantic && npm run build-semantic && gulp watch",
     "start": "npm run build-semantic && react-scripts start",
-    "build": "npm run build-semantic && react-scripts build",
+    "build": "react-scripts build",
     "theme": "cd src/semantic && gulp build && cd ../../ && npm start",
     "test": "react-scripts test",
     "coverage": "react-scripts test --coverage",
