--- a/client/package.json
+++ b/client/package.json
@@ -42,7 +42,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": [
+  "overrideBrowserslist": [
     ">0.2%",
     "not dead",
     "not ie <= 11",
